cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz212841.cpp
enum class STypedEnum212841 {
    EN1212841,
    EN2212841
};

int val212841 = EN1212841;
int vvvv212841 = STypedEnum212841::EN1212841;
